--- a/projects/dvid_logo/constraints/miniSpartan6.ucf
+++ b/projects/dvid_logo/constraints/miniSpartan6.ucf
@@ -4,6 +4,8 @@
 # Constraints for dvid_logo project
 #
 ###########################################
+NET "CLK50"    LOC = "K3" | IOSTANDARD = LVCMOS33 | PERIOD = 50 MHz;
+
 VCCAUX = 3.3;
 NET "LEDS<0>" LOC="P11";
 NET "LEDS<1>" LOC="N9";
@@ -33,7 +35,7 @@ NET "hdmi_in_p<1>" LOC="B6" | IOSTANDARD="TMDS_33"; # IO_L4P_0
 NET "hdmi_in_n<1>" LOC="A6" | IOSTANDARD="TMDS_33"; # IO_L4N_0
 NET "hdmi_in_p<2>" LOC="B5" | IOSTANDARD="TMDS_33"; # IO_L2P_0
 NET "hdmi_in_n<2>" LOC="A5" | IOSTANDARD="TMDS_33"; # IO_L2N_0
-NET "hdmi_in_p<3>" LOC="C9" | IOSTANDARD="TMDS_33" | PERIOD=12 ns; # IO_L34P_GCLK19_0
+NET "hdmi_in_p<3>" LOC="C9" | IOSTANDARD="TMDS_33" | PERIOD=10.00 ns; # IO_L34P_GCLK19_0
 NET "hdmi_in_n<3>" LOC="A9" | IOSTANDARD="TMDS_33"; # IO_L34N_GCLK18_0
 NET "hdmi_in_sclk" LOC="C1" | IOSTANDARD="LVTTL"; # IO_50P_M3WE_3
 NET "hdmi_in_sdat" LOC="B1" | IOSTANDARD="LVTTL"; # IO_50N_M3BA2_3
