changed edidrom in hdmi_in_out project
 - changed edidrom to 7" monitor
 - project works with Sero 7 Pro tablet as HDMI input and 7" minitor from Adafruit as output
http://www.adafruit.com/product/1033

--- a/projects/HDMI_in_out_lx9/HDMI_in_out/pins.ucf
+++ b/projects/HDMI_in_out_lx9/HDMI_in_out/pins.ucf
@@ -44,14 +44,14 @@ NET btns(1)         	LOC="L3" | IOSTANDARD=LVTTL |PULLUP;
 NET btns(2)         	LOC="L4" | IOSTANDARD=LVTTL |PULLUP;
 NET btns(3)         LOC="L5" | IOSTANDARD=LVTTL |PULLUP;
             
-#NET leds(0)         LOC="P11" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
-#NET leds(1)         LOC="N9" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
-#NET leds(2)         LOC="M9" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
-#NET leds(3)         LOC="P9" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
-#NET leds(4)         LOC="T8" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
-#NET leds(5)         LOC="N8" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
-#NET leds(6)         LOC="P8" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
-#NET leds(7)         LOC="P7" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(0)         LOC="P11" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(1)         LOC="N9" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(2)         LOC="M9" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(3)         LOC="P9" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(4)         LOC="T8" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(5)         LOC="N8" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(6)         LOC="P8" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
+NET leds(7)         LOC="P7" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;
 
 NET hsync0         	LOC="J1" | IOSTANDARD=LVTTL;
 NET vsync0         	LOC="G1" | IOSTANDARD=LVTTL; 
