--- a/projects/ov7670/ms6p.ucf
+++ b/projects/ov7670/ms6p.ucf
@@ -1,23 +1,21 @@
-NET "clk50" TNM_NET = clk50;
-TIMESPEC TS_clk50 = PERIOD "clk50" 20 ns HIGH 50%;
-NET "clk50"   LOC = "K3"; # Bank = 0, Pin name = IP_L13P_0/GCLK8, Type = GCLK, Sch name = GCLK0
+NET "CLK50" LOC = "K3" | IOSTANDARD = LVCMOS33 | PERIOD = 50 MHz;
 
-NET "OV7670_PWDN"  LOC = "E7" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA0
-NET "OV7670_RESET" LOC = "C8" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA4
-NET "OV7670_D<0>"  LOC = "D8" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA1
-NET "OV7670_D<1>"  LOC = "E8" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA5
-NET "OV7670_D<2>"  LOC = "D9" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA2
-NET "OV7670_D<3>"  LOC = "A10" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA6
-NET "OV7670_D<4>"  LOC = "B10" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA3
-NET "OV7670_D<5>"  LOC = "C10" | IOSTANDARD=LVTTL | SLEW=SLOW; # JA7
-NET "OV7670_D<6>"  LOC = "E10" | IOSTANDARD=LVTTL | SLEW=SLOW; # JB0
-NET "OV7670_D<7>"  LOC = "F9" | IOSTANDARD=LVTTL | SLEW=SLOW; # JB4
-NET "OV7670_XCLK"  LOC = "F10" | IOSTANDARD=LVTTL | SLEW=SLOW; # JB1
-NET "OV7670_PCLK"  LOC = "D11" | IOSTANDARD=LVTTL | SLEW=SLOW; # JB5
-NET "OV7670_HREF"  LOC = "E11" | IOSTANDARD=LVTTL | SLEW=SLOW; # JB2
-NET "OV7670_VSYNC" LOC = "D14" | IOSTANDARD=LVTTL | SLEW=SLOW; # JB6
-NET "OV7670_SIOD"  LOC = "D12" | IOSTANDARD=LVTTL | SLEW=SLOW | PULLUP; # JB3
-NET "OV7670_SIOC"  LOC = "E12" | IOSTANDARD=LVTTL | SLEW=SLOW; # JB7
+NET "OV7670_PWDN"  LOC = "E7"  | IOSTANDARD=LVTTL | SLEW=SLOW; # A0
+NET "OV7670_RESET" LOC = "C8"  | IOSTANDARD=LVTTL | SLEW=SLOW; # A1
+NET "OV7670_D<0>"  LOC = "D8"  | IOSTANDARD=LVTTL | SLEW=SLOW; # A2
+NET "OV7670_D<1>"  LOC = "E8"  | IOSTANDARD=LVTTL | SLEW=SLOW; # A3
+NET "OV7670_D<2>"  LOC = "D9"  | IOSTANDARD=LVTTL | SLEW=SLOW; # A4
+NET "OV7670_D<3>"  LOC = "A10" | IOSTANDARD=LVTTL | SLEW=SLOW; # A5
+NET "OV7670_D<4>"  LOC = "B10" | IOSTANDARD=LVTTL | SLEW=SLOW; # A6
+NET "OV7670_D<5>"  LOC = "C10" | IOSTANDARD=LVTTL | SLEW=SLOW; # A7
+NET "OV7670_D<6>"  LOC = "E10" | IOSTANDARD=LVTTL | SLEW=SLOW; # A8
+NET "OV7670_D<7>"  LOC = "F9"  | IOSTANDARD=LVTTL | SLEW=SLOW; # A9
+NET "OV7670_XCLK"  LOC = "F10" | IOSTANDARD=LVTTL | SLEW=FAST; # A10
+NET "OV7670_PCLK"  LOC = "D11" | IOSTANDARD=LVTTL | SLEW=FAST; # A11
+NET "OV7670_HREF"  LOC = "E11" | IOSTANDARD=LVTTL | SLEW=FAST; # B0
+NET "OV7670_VSYNC" LOC = "D14" | IOSTANDARD=LVTTL | SLEW=FAST; # B1
+NET "OV7670_SIOD"  LOC = "D12" | IOSTANDARD=LVTTL | SLEW=SLOW; # B2
+NET "OV7670_SIOC"  LOC = "E12" | IOSTANDARD=LVTTL | SLEW=SLOW; # B3
 NET "OV7670_PCLK" CLOCK_DEDICATED_ROUTE = FALSE;
 
 # LEDs
@@ -37,7 +35,5 @@ NET "HDMI_out_P(1)"  LOC = "B12" | IOSTANDARD = TMDS_33 ; # Red
 NET "HDMI_out_N(1)"  LOC = "A12" | IOSTANDARD = TMDS_33 ;
 NET "HDMI_out_P(2)"  LOC = "C11" | IOSTANDARD = TMDS_33 ; # Green
 NET "HDMI_out_N(2)"  LOC = "A11" | IOSTANDARD = TMDS_33 ;
-NET "HDMI_out_P(3)" LOC = "B14" | IOSTANDARD = TMDS_33 ; # Clock
-NET "HDMI_out_N(3)" LOC = "A14" | IOSTANDARD = TMDS_33 ;
-
-#NET "btn" LOC = "B18";
+NET "HDMI_out_P(3)"  LOC = "B14" | IOSTANDARD = TMDS_33 ; # Clock
+NET "HDMI_out_N(3)"  LOC = "A14" | IOSTANDARD = TMDS_33 ;
